force-app/main/default/objects/Account/fields/FOPS_Account_Role__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Account_Role__c</fullName>
    <label>Account Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Client</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>End Client (via Agency)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>