force-app/main/default/objects/Account/fields/FOPS_Average_DSO_Days__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Average_DSO_Days__c</fullName>
    <inlineHelpText>Who actually pays on time.</inlineHelpText>
    <label>Average DSO (Days)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>