force-app/main/default/objects/Account/fields/FOPS_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Billing_Email__c</fullName>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>