force-app/main/default/objects/Account/fields/FOPS_Client_Health__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Client_Health__c</fullName>
    <label>Client Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>