force-app/main/default/objects/Account/fields/FOPS_Lifetime_Billed_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Lifetime_Billed_Base__c</fullName>
    <label>Lifetime Billed (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>