force-app/main/default/objects/Account/fields/FOPS_Parent_End_Client__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Parent_End_Client__c</fullName>
    <label>Parent End Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agencies</relationshipLabel>
    <relationshipName>FOPS_Agencies</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>