force-app/main/default/objects/Account/fields/FOPS_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Tax_ID__c</fullName>
    <inlineHelpText>ABN / UEN / VAT / MST.</inlineHelpText>
    <label>Tax ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>