force-app/main/default/objects/Account/recordTypes/Direct_Client.recordType-meta.xml
<RecordType>
    <fullName>Direct_Client</fullName>
    <active>true</active>
    <label>Direct Client</label>
</RecordType>