force-app/main/default/objects/Account/recordTypes/End_Client.recordType-meta.xml
<RecordType>
    <fullName>End_Client</fullName>
    <active>true</active>
    <label>End Client</label>
</RecordType>