force-app/main/default/objects/Account/recordTypes/Recruiting_Agency.recordType-meta.xml
<RecordType>
    <fullName>Recruiting_Agency</fullName>
    <active>true</active>
    <label>Recruiting Agency</label>
</RecordType>